--- a/src/componentStyles/Hero.css
+++ b/src/componentStyles/Hero.css
@@ -4,6 +4,7 @@
   gap: 1.25rem;
   position: sticky;
   top: 0;
+  z-index: 2;
   background-color: white;
 }
 .hero > h1 {
@@ -11,8 +12,6 @@
   padding: 2rem;
   background-color: var(--primary-blue);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
 }
 h2 {
   padding: 1rem 2rem;
@@ -72,4 +71,16 @@ h2 {
 .filters > .active {
   color: var(--primary-blue);
   border-bottom: 2px solid var(--primary-blue);
+}
+@media screen and (max-width: 600px) {
+  .hero > h2 {
+    font-size: 1.25rem;
+  }
+  .filters {
+    justify-content: space-between;
+    gap: 1rem;
+  }
+  .filters > button {
+    font-size: 0.8rem;
+  }
 }
