--- a/src/componentStyles/Task.css
+++ b/src/componentStyles/Task.css
@@ -66,4 +66,8 @@ input[type="checkbox"] {
     font-size: 1rem;
     width: 50%;
   }
+  .action-btns > button > img {
+    width: 20px;
+    height: 20px;
+  }
 }
